force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <label>Question</label>
    <nameField>
        <displayFormat>Question-{000}</displayFormat>
        <label>Question</label>
        <type>AutoNumber</type>
	</nameField>
	<pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>