force-app/main/default/objects/Question__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>A,B</fullName>
            </value>
            <value>
                <fullName>A,C</fullName>
            </value>
            <value>
                <fullName>A,D</fullName>
            </value>
            <value>
                <fullName>A,E</fullName>
            </value>
            <value>
                <fullName>A,F</fullName>
            </value>
            <value>
                <fullName>B,C</fullName>
            </value>
            <value>
                <fullName>B,D</fullName>
            </value>
            <value>
                <fullName>B,E</fullName>
            </value>
            <value>
                <fullName>B,F</fullName>
            </value>
            <value>
                <fullName>C,D</fullName>
            </value>
            <value>
                <fullName>C,E</fullName>
            </value>
            <value>
                <fullName>C,F</fullName>
            </value>
            <value>
                <fullName>D,E</fullName>
            </value>
            <value>
                <fullName>D,F</fullName>
            </value>
            <value>
                <fullName>E,F</fullName>
            </value>
            <value>
                <fullName>A,B,C</fullName>
            </value>
            <value>
                <fullName>A,B,D</fullName>
            </value>
            <value>
                <fullName>A,B,E</fullName>
            </value>
            <value>
                <fullName>A,B,F</fullName>
            </value>
            <value>
                <fullName>A,C,D</fullName>
            </value>
            <value>
                <fullName>A,C,E</fullName>
            </value>
            <value>
                <fullName>A,C,F</fullName>
            </value>
            <value>
                <fullName>A,D,E</fullName>
            </value>
            <value>
                <fullName>A,D,F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>