force-app/main/default/objects/Question__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <label>D</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>