force-app/main/default/objects/Question__c/fields/E__c.field-meta.xml
<CustomField>
    <fullName>E__c</fullName>
    <label>E</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>