force-app/main/default/objects/Question__c/fields/F__c.field-meta.xml
<CustomField>
    <fullName>F__c</fullName>
    <label>F</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>