force-app/main/default/objects/Question__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>