force-app/main/default/objects/Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>A__c</columns>
    <columns>B__c</columns>
    <columns>C__c</columns>
    <columns>D__c</columns>
    <columns>E__c</columns>
    <columns>F__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>